--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 node_modules/
 .cache/
 public
+src/images/construccion.jpg
+src/images/construccionmin.jpg
+src/images/favicon.jpg
+src/images/icon.png
+src/images/ivan.jpg
+src/images/mika.jpg
+src/images/morgan.jpg 
+src/images/nicolas.jpg
+src/images/nicolasmin.jpg 
+src/images/scott.jpg 
+src/images/tecelec.jpg 
+src/images/tecelecmin.jpg
